--- a/NC3.xcodeproj/xcshareddata/xcschemes/NC3.xcscheme
+++ b/NC3.xcodeproj/xcshareddata/xcschemes/NC3.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D7A93ED623FB388800C5845E"
-               BuildableName = "NC3.app"
+               BuildableName = "Jumpy Alien.app"
                BlueprintName = "NC3"
                ReferencedContainer = "container:NC3.xcodeproj">
             </BuildableReference>
@@ -45,11 +45,18 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D7A93ED623FB388800C5845E"
-            BuildableName = "NC3.app"
+            BuildableName = "Jumpy Alien.app"
             BlueprintName = "NC3"
             ReferencedContainer = "container:NC3.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -62,7 +69,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D7A93ED623FB388800C5845E"
-            BuildableName = "NC3.app"
+            BuildableName = "Jumpy Alien.app"
             BlueprintName = "NC3"
             ReferencedContainer = "container:NC3.xcodeproj">
          </BuildableReference>
